<resources>
    <string name="app_name">Matn.uz</string>
    <string name="thumbsup"><node>♥️🇺🇿 ♾</node></string>
    <string name="sp_tittle_tx">Bizning tilimiz muqaddas</string>
    <string name="sp_app_tx">MATN.UZ</string>
    <string name="sp_description_tx">Bexato Qulay Bepul</string>
    <string name="sp_tittle_tx2">O‘zbek tilida bexato \n yozamiz</string>
    <string name="sp_btn_tx">Boshlash</string>
    <string name="text_empty">text maydoni to‘ldirilishi shart.</string>
    <string name="no_internet_tx1">Obbo! Tarmoqga ulanishda \n nosozlik yuzaga keldi!</string>
    <string name="no_internet_tx2">Mobil internet yoki Wi-Fi tarmog’iga \n bog’lanishni tekshirib ko’ring</string>
    <string name="refresh_btn_tx">Qayta urinish</string>
    <string name="editor_tab_tx">Tahrir</string>
    <string name="dictionary_tab_tx">Lug‘at</string>
    <string name="lotin_tx">Lotincha</string>
    <string name="krill_tx">Кириллча</string>
    <string name="check_tx">Tekshirish</string>
    <string name="input_text">Matnni kiriting…</string>
    <string name="empty_text">Izlayotgan so‘zingizni \n yuqoridagi maydonchaga kiriting</string>
    <string name="conditions_text">Foydalanish shartlari</string>
    <string name="app_info_text">Loyiha haqida</string>
    <string name="privacy_police_text">Foydalanilgan ma’lumotlar siyosati</string>
    <string name="light_color">Och rang</string>
    <string name="dark_color">To’q rang</string>
    <string name="social_media_tittle_text">Loyihanining ijtimoiy tarmoqlardagi sahifalariga \n a’zo bo‘lishni unutmang:</string>
    <string name="tittle_2">Loyiha yuzasidan taklifingiz bo‘lsa quyidagi havola \n orqali murojaat qilishingiz mumkin:</string>
    <string name="www_matn_uz">www.matn.uz</string>
    <string name="footer_text">MATN.UZ © 2020-yil. “Project Managers” MCHJ</string>
    <string name="clear_text_info_1">Matn hali bo\'sh</string>
    <string name="clear_text_info_2">Tozalandi!</string>
    <string name="copy_text_info_1">Nusxalandi!</string>
    <string name="count_text_info">Eng ko‘pi bilan \n 1000 ta belgi!</string>
    <string name="max_count">1000</string>
    <string name="zero">0</string>
    <string name="info_app_text">Ilova haqida ma’lumot</string>
    <string name="app_info_text_2">Loyiha haqida</string>
    <string name="loyiha_haqida">Loyiha haqida</string>
    <string name="loyiha_ishtirokchilari">Loyiha ishtirokchilari</string>
    <string name="country_text">Ushbu tizim Vatanparvarlik tuyg‘usi ila ishlab chiqilgan.</string>
    <string name="xavfsizlik_siyosati">Xavfsizlik siyosati</string>
    <string name="text_policy_all"><b>    Ushbu “Xavfsizlik siyosati” hujjati (bundan buyon matnda “siyosat” deb yuritiladi) Internet foydalanuvchilari (bundan keyin – “siz” yoki “maʼlumotlar”dan foydalanish qoidalarini anglatadi) va sayt egasining (bundan keyin – “biz” yoki “Maʼmuriyat”) maʼlumotlarini anglatadi.</b> \n\n<b> 1. Qayta ishlangan maʼlumotlar</b>  \n\n1.1. Saytdan foydalangan holda biz sizning shaxsiy maʼlumotlaringizni yig‘maymiz.  \n\n1.2. Saytda to‘plangan barcha maʼlumotlar (bundan keyin “Anonimlashtirilgan maʼlumotlar” deb nomlanadi) taqdim etiladi va anonim shaklda qabul qilinadi.  \n\n1.3. Anonim maʼlumotlar sizga imkon bermaydigan quyidagi maʼlumotlarni o‘z ichiga oladi:  \n\n1.3.1. Saytning onlayn shakllar va dasturiy modullaridan foydalanib, o‘zingizning ismingiz, telefon raqamingiz va elektron pochta manzilingizdan foydalangan holda o‘zingiz haqingizdagi maʼlumot;  \n\n1.3.2. Siz foydalanadigan dasturiy taʼminot sozlamalariga qarab, avtomatik ravishda anonim shaklda uzatiladigan maʼlumotlar.  \n\n1.4. Maʼmuriyat foydalanuvchidan Sayt yordamida to‘plangan anonim maʼlumotlarning tarkibidagi talablarni belgilash huquqiga ega.  \n\n1.5. Agar biron-bir maʼlumot majburiy deb belgilanmagan bo‘lsa, uni taqdim etish yoki oshkor qilish Foydalanuvchi ixtiyorida bo‘ladi. Shu bilan birga, siz cheksiz doiralarning bunday maʼlumotlarga kirishiga rozilik bildirasiz. Ko‘rsatilgan maʼlumotlar taqdim qilingan yoki boshqa shaklda ochilgan paytdan boshlab hammaga ochiq bo‘ladi.  \n\n1.6. Maʼmuriyat taqdim etilgan maʼlumotlarning to‘g‘riligini tekshirmaydi va Foydalanuvchi ushbu Siyosatga muvofiq ularni qayta ishlashga zarur roziligini oladi. Foydalanuvchi vijdonan harakat qiladi va ehtiyotkorlik bilan ishlaydi hamda bunday maʼlumotlarni yangilab turish, undan foydalanish uchun barcha zarur roziliklarni olishga harakat qiladi. Siz Saytda uchinchi tomon dasturlaridan foydalanish imkoniyatini tan olasiz va qabul qilasiz, buning natijasida bunday shaxslar 1.3- bandda ko‘rsatilgan maʼlumotlarni nomaʼlum shaklda olishlari va uzatishlari mumkin.  \n\n1.8. Uchinchi tomon dasturlari yordamida anonim maʼlumotni yig‘ish tarkibi va shartlari bevosita ularning egalari tomonidan belgilanadi va quyidagilarni o‘z ichiga olishi mumkin: \n\n · Brauzer maʼlumotlari (turi, versiyasi, cookie fayllari); \n\n · Qurilma maʼlumotlari va uning holati; \n\n·Operatsion tizim maʼlumotlari (turi,versiyasi,ekran o‘lchamlari); \n\n · So‘rov maʼlumotlari (vaqt, o‘tish manbai, IP manzili).  \n\n1.9. Maʼmuriyat uchinchi tomon tomonidan foydalanuvchining Anonim maʼlumotlarnit ishlatish tartibi uchun javobgar bo‘lmaydi  \n\n<b> 2. Maʼlumotlarni qayta ishlash maqsadlari</b>\n\n2.1. Maʼmuriyat maʼlumotlardan quyidagi maqsadlarda foydalanadi:  \n\n2.1.1. Kirish so‘rovlari va foydalanuvchi bilan aloqani qayta ishlash;  \n\n2.1.2. Axborot xizmatlari, shu jumladan reklama materiallarini tarqatish;  \n\n2.1.3. Marketing, statistik va boshqa tadqiqotlarini o‘tkazish;  \n\n2.1.4. Saytdagi reklama materiallarini yo‘naltirish.  \n\n<b> 3. Maʼlumotlarni himoya qilish talablari</b>  \n\n3.1. Maʼmuriyat maʼlumotlarni saqlaydi va ularni ichki qoidalarga muvofiq ruxsatsiz kirish va tarqatishdan himoya qiladi.  \n\n3.2. Olingan maʼlumotlarga nisbatan maxfiylik saqlanadi, agar ular Foydalanuvchi tomonidan ochiq bo‘lsa, shuningdek saytda ishlatiladigan uchinchi tomon texnologiyalari va dasturlari yoki foydalanuvchi tomonidan ishlatiladigan dasturiy taʼminot ushbu shaxslar yoki boshqa foydalanuvchilar va internet foydalanuvchilari bilan ochiq almanishuvni taʼminlagan hollar bundan mustasno.  \n\n3.3. Ish sifatini yaxshilash uchun 1 (bir) yil davomida Saytdan foydalanish doirasida Foydalanuvchi tomonidan amalga oshirilgan harakatlar to‘g‘risidagi jurnal fayllarini saqlash huquqiga ega.  \n\n<b> 4. Maʼlumot uzatish</b>  \n\n4.1. Maʼmuriyat quyidagi hollarda maʼlumotlarni uchinchi shaxslarga uzatish huquqiga ega: \n\n · Foydalanuvchi bunday harakatlarga, shu jumladan foydalanuvchi maʼlum bir maʼlumotni berishni cheklamaydigan dasuturiy taʼminot sozlamalarini ishlatgan holatlarda roziligini bildiradi; \n\n · Maʼlumotni qayta ishlash, maqsadga muvofiq uzatish talab etiladi: \n\n · Foydalanuvchi tomonidan sodir etilgan qonunbuzarlik sababli, Maʼmuriyat huquqlari qonuniy himoya qilinadi.  \n\n<b> 5. Maxfiylik siyosatining o‘zgarishi </b> \n\n5.1. Ushbu Siyosat Maʼmuriyat tomonidan bir tomonlama tartibda foydalanuvchi tomonidan ogohlantirilmasdan o‘zgartilirishi yoki bekor qilinishi mumkin. Agar Siyosatning yangi variantida boshqacha qoidalar nazarda tutilgan bo‘lmasa, yangi siyosat Saytga joylashtirilgan paytdan boshlab kuchga kiradi.  \n\n5.2. Siyosatning joriy talqini saytga joylashtirilgan.</string>
    <string name="foydalanuvchi_siyosati">Foydalanuvchi siyosati</string>
    <string name="user_policy_all"><b>  1. Umumiy qoidalar</b> \n\n1.1. Matn.uz tiziming faoliyati demokratiya, insonparvarlik, barcha uchun ochiqligi, umuminsoniy qadriyatlar ustunligi, fuqarolikni ta’minlash, shaxsning erkin rivojlanishi prinsiplariga asoslangan. \n\n1.2. Matn.uz tizimidan foydalanish bepul \n\n <b>  2.Matn.uz tizimning asosiy vazifalari </b> \n\n2.1. Berilgan matnni imlo xatolar mavjud yoki yo’qligiga tekshirish, universal izohli lug’at, milliy va otin alifbosida keltirilgan matningiz kiril alifbosiga o‘girib berish (shu o\'rinda krill alifbosidagi matnni lotin alifbosiga o\'girish), matn tahriri. \n\n2.2. Dasturchilar uchun REST-API xizmati. \n\n<b> 3.Foydalanuvchilarning xuquq va majburiyatlari</b>\n\n3.1. Tizimdan foydalanish xuquqi fuqaroligi, yoshi, sotsial va boshqa kelib chiqishidan qat’iy nazar Tizim, xududlarda yashovchi barcha aholiga, shu jumladan ishlab chiqarish, korxonalar va tashkilotlarga beriladi. \n\n3.2. Foydalanuvchilar quyidagi xuquqlarga ega: \n\n - Tizim fondidan kerakli so’zlar haqida to’liq izoh olish; \n\n - Tizim tomonidan ko‘rsatiladigan imloviy xatolar tekshirish, online tahrirlash va boshqa xizmat turlaridan foydalanish; \n\n - Tizim tomonidan o‘tkaziladigan axborot \n\n - ommaviy tadbirlarida ishtirok etish; \n\n - Tizimning kamchiliklarini ko’rsatish (qayta aloqa bo’limi) hamda izohli lug’at omborini to’ldirish; \n\n3.3. Tizimning xizmatlarida foydalanish mutlaqo bepul va ro’yxatdan o’tish ta’lab etilmaydi. \n\n3.4. Foydalanuvchilarga cheklanmagan ravishda o’z materiallarini tekshirish imkoniyati beriladi. Dasturchilarga REST-API xizmati maxsus kelishuv hamda bepul ravishda taqdim etiladi. \n\n3.5. Tizimni rivojlantirish bo’yicha takliflar berish hamda hamkorlikka chorlash. \n\n3.6. Foydalanuvchilar tizimga kiritilayotgan ma’lumotlarga (yangi so’z qushish, so’zga izoh berish, qayta aloqa hizmatidan foydalanish) e’tibor bilan qarashga chorlaymiz. Tizim faoliyatida kamchiliklar aniqlansa, Matn.uz xodimlariga xabar berishi lozim. \n\n3.7. Matn.uz tizimiga zarar yetkazgan shaxslar, qonunga binoan jinoiy yoki boshqa javobgarlikka tortiladi. \n\n3.8. ARM fondidan hujjatlar va materiallarni yo‘qotgan yoki unga qayta tiklana olmaydigan darajada zarar yetkazgan foydalanuvchilar, ARM xodimlari tomonidan tan olingan teng qiymatli o‘rniga-o‘rin huddi shunday hujjat va materiallar bilan o‘zgartirishlari (shu jumladan, nusxalari bilan), imkonsiz hollarda ularning qiymati 5 barobar narxlarda undiriladi. Ko‘p miqdorlik (bir necha barobar ko‘p miqdordagi to‘lov) amaldagi belgilangan hujjatlar asosida yo‘qotilgan va zarar ko‘rgan nashrlarning bahosidan kelib chiqqan holda ARM xodimlari yoki jalb etilgan mutahassislar tomonidan aniqlanadi. \n\n3.9. Tizimdan foydalanish qoidalarini buzgan foydalanuvchilar ma’lum muddatga rahbariyat tomonidan o‘rnatilgan Tizimdan foydalanish huquqidan maxrum etilishlari mumkin. \n\n<b>  4. Tizim foydalanuvchilarga xizmat ko‘rsatish bo‘yicha majburiyatlari</b> \n\n4.1. Tizimdagi materiallardan qoidalar asosida foydalanishni, saqlashni va hisobot ishlarini amalga oshirish; izohli lug’atni yuritish. \n\n4.2. Tizim majbur: \n\n-foydalanuvchilarga tizimdan yuqorida ko’rsatib o’tilgan turdagi axborot-resurslaridan foydalanishni ta’minlashi; \n\n -foydalanuvchilarning talablarini o‘rganish va to‘liq qondirib borish; \n\n -tizim xizmatlarini mukammallash maqsadida foydalanuvchilar bilan ishlashning turli individual va guruxli shaklini qo‘llash; \n\n -foydalanuvchilarga xizmat ko‘rsatishda yuqori madaniyatlilik va kasb mahoratini ta’minlash; \n\n -kerakli axborotlarni mustaqil ravishda izlashni o‘rgatish bo‘yicha ko‘nikmalarni rivojlantirishni amalga oshirish uchun sharoitlarni yaratish; \n\n -tizimning so’z boyligi hamda tekshirish kerakli darajada bo’lmagan holatlarida, foydalanuvchilarga alternativ variant taqdim etish hamda ; \n\n -ommaviy tadbirlarni yuqori darajada o‘tkazish; \n\n -tizimning ijobiy qiyofasini yaratishga ko‘maklashish, ARM tomonidan ko‘rsatiladigan xizmatlarni va fondlarni targ‘ib qilish, foydalanuvchilarning talablarini o‘rganish va ularning hoxishlarini inobatga olgan holdi yangidan-yangi xizmat turlarini yaratib borish.</string>
</resources>