<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    tools:context=".presentation.screen.about.AppInfoScreen">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/main_color"
        android:elevation="4dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/backBtn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:adjustViewBounds="true"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?actionBarItemBackground"
            android:padding="20dp"
            android:src="@drawable/ic_back"
            tools:ignore="UnusedAttribute" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/rubik"
            android:gravity="center"
            android:text="@string/app_info_text_2"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </androidx.appcompat.widget.LinearLayoutCompat>


    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/tab_item_color"
        app:layout_constraintBottom_toTopOf="@id/viewPagerScreen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBar"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintVertical_chainStyle="packed"
        app:tabIndicatorColor="@color/sp_btn_color_1"
        app:tabSelectedTextColor="@color/tab_item_text_color_change_active"
        app:tabTextAppearance="@style/tab_text"
        app:tabTextColor="@color/tab_item_text_color_change_no_active">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loyiha_haqida" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loyiha_ishtirokchilari" />

    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPagerScreen"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/redImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tabLayout" />

    <TextView
        android:layout_marginTop="4dp"
        android:id="@+id/redImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/thumbsup"
        app:layout_constraintBottom_toTopOf="@id/textBottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewPagerScreen"
        app:layout_constraintVertical_bias="0" />

    <TextView
        android:id="@+id/textBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="13dp"
        android:fontFamily="@font/rubik"
        android:text="@string/country_text"
        android:textColor="@color/text_color_3"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/redImage"
        app:layout_constraintVertical_bias="1" />

</androidx.constraintlayout.widget.ConstraintLayout>