<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.screens.about.policy.PolicyScreen">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/main_color"
        android:elevation="6dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/backBtn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:adjustViewBounds="true"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?actionBarItemBackground"
            android:padding="20dp"
            android:src="@drawable/ic_back"
            tools:ignore="UnusedAttribute" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/rubik"
            android:gravity="center"
            android:text="@string/xavfsizlik_siyosati"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedText"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/bg_color"
        android:clipToPadding="false"
        android:fadeScrollbars="true"
        android:fadingEdge="vertical"
        android:fadingEdgeLength="50dp"
        android:requiresFadingEdge="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linerBottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBar">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rubik"
            android:justificationMode="inter_word"
            android:padding="10dp"
            android:text="@string/text_policy_all"
            android:textColor="@color/text_color"
            android:textSize="18sp" />

    </androidx.core.widget.NestedScrollView>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linerBottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bg_color"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/redImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/thumbsup" />

        <TextView
            android:id="@+id/textBottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="13dp"
            android:fontFamily="@font/rubik"
            android:text="@string/country_text"
            android:textColor="@color/text_color_3"
            android:textSize="12sp" />
    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.constraintlayout.widget.ConstraintLayout>