<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="40dp"
    android:background="@color/bg_color"
    app:cardCornerRadius="6dp"
    app:cardElevation="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/networkImage"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/wifi_off"
            app:layout_constraintBottom_toTopOf="@id/networkText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/networkText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/rubik"
            android:gravity="center"
            android:text="@string/no_internet_tx1"
            android:textColor="@color/text_color_3"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@id/networkText1"
            app:layout_constraintEnd_toEndOf="@+id/networkImage"
            app:layout_constraintStart_toStartOf="@+id/networkImage"
            app:layout_constraintTop_toBottomOf="@id/networkImage" />

        <TextView
            android:id="@+id/networkText1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/rubik"
            android:gravity="center"
            android:text="@string/no_internet_tx2"
            android:textColor="@color/text_color"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@id/border"
            app:layout_constraintEnd_toEndOf="@+id/networkText"
            app:layout_constraintStart_toStartOf="@+id/networkText"
            app:layout_constraintTop_toBottomOf="@id/networkText" />

        <View
            android:id="@+id/border"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#EFEFEF"
            app:layout_constraintBottom_toTopOf="@id/btnTryAgain"
            app:layout_constraintTop_toBottomOf="@id/networkText1" />

        <TextView
            android:id="@+id/btnTryAgain"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="?selectableItemBackground"
            android:fontFamily="@font/rubik"
            android:gravity="center"
            android:text="@string/refresh_btn_tx"
            android:textColor="@color/text_color_3"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/networkText1"
            app:layout_constraintVertical_bias="0" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>